--- a/www/index.html
+++ b/www/index.html
@@ -35,10 +35,25 @@
   <body ng-app="starter">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar-positive">
+        <h1 class="title">GERENCIADOR DE TAREFAS</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content ng-controller="mainController">
+        <p>Bem Vindo - {{nomeUsuario}}</p>
+
+      <input type="text" ng-model="mensagem" placeholder="Digite seu nome">
+      <button ng-click="newMessage('i')">ADD</button>
+      <p>
+        {{lista[0]}}
+      </p>
+      <p ng-repeat="item in lista">
+        {{lista}}
+      </p>
+      <ion-list>
+        <ion-item ng-repeat="p in lista" href="#">
+          {{p}}
+        </ion-item>
+      </ion-list>
       </ion-content>
     </ion-pane>
   </body>
