--- a/www/index.html
+++ b/www/index.html
@@ -55,10 +55,16 @@
         </div>
       </ion-footer-bar>
       <ion-content>
-        <button class="button button-block button-positive" ng-click="onItemAdd()">ADD</button>
-        <button class="button button-block button-assertive" ng-click="onClickRemove()">
-            <ion-icon name="trash">REMOVER</ion-icon>
-        </button>
+        <div class="row">
+          <div class="col col-45">
+              <button class="button button-block button-positive" ng-click="onItemAdd()">ADD</button>
+          </div>
+          <div class="col col-45">
+              <button class="button button-block button-assertive" ng-click="onClickRemove()">
+                  <ion-icon name="trash">REMOVER</ion-icon>
+              </button>
+          </div> 
+        </div>
         <ion-list show-delete="removeStatus">
           <ion-item ng-repeat="item in lista track by $index" ng-hide="onHideItem(item)">
             <div class="row">
