--- a/www/index.html
+++ b/www/index.html
@@ -71,6 +71,7 @@
               <div class="col col-90">
                   {{item.nome}}
                   <ion-delete-button class="ion-minus-circled" ng-click="onItemRemove(item)"></ion-delete-button>
+                  <ion-option-button class="button-positive" ng-click="onItemEdit(item)">EDITAR</ion-option-button>
               </div>
               <div class="col col-10">
                   <button class="button button-small button-positive button-outline" ng-click="onMarkTask(item)">
